src/main/java/org/example/basic/global/error/exception/AuthenticationException.java
package org.example.basic.global.error.exception;


import org.example.basic.global.error.ErrorCode;

public class AuthenticationException extends BusinessException {

    public AuthenticationException(ErrorCode errorCode) {
        super(errorCode);
    }
}
